themes/experience-engine/assets/styles/components/live-player.css
#live-player {
	position: fixed;
	bottom: 0;
	right: 0;
	left: 0;
	background-color: #efefef;
	border-top: 1px solid #ddd;
	padding: 20px;
	max-height: 74px;
}

.play-btn,
.pause-btn,
.resume-btn,
.loading-btn {
	display: none;
}

.LIVE_PAUSE .resume-btn,
.LIVE_PLAYING .pause-btn,
.LIVE_STOP .play-btn,
.LIVE_FAILED .play-btn,
.LIVE_BUFFERING .loading-btn,
.LIVE_CONNECTING .loading-btn,
.LIVE_RECONNECTING .loading-btn,
.STREAM_GEO_BLOCKED .play-btn,
.STATION_NOT_FOUND .play-btn {
	display: block;
}

.cue-point-title {

}

.cue-point-artist {

}

.cue-point-title + .cue-point-artist:before {
	content: '-';
	margin: 0 10px;
}

.controls {
	display: flex;
	justify-content: space-around;
}

.wp-audio-shortcode,
iframe[src^="https://omny.fm"] {
	display: none;
}

.jacapps {
	& .wp-audio-shortcode,
	& iframe[src^="https://omny.fm"] {
		display: block;
	}
}

